--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -48,6 +48,7 @@
         </section>
     </section>
 
+    <!-- adding loading -->
     <section id="loader">
         <img src="../assets/flip-page/loader-img.png" alt="წიგნი">
         <h1>მიმდინარეობს წიგნის ჩატვირთვა</h1>
