--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1325,7 +1325,7 @@ body {
   border-bottom: none;
 }
 .flip-page-header .menu-li:hover {
-  background-color: #022859;
+  background-color: #0468DC;
   color: #fff;
   font-size: 24px;
 }
