--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -52,7 +52,7 @@ body{
         border-bottom: none;
     }
     .menu-li:hover{
-        background-color: #022859;
+        background-color: #0468DC;
         color: #fff;
         font-size: 24px;
     }
