--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flip page</title>
     <link rel="stylesheet" href="../styles/css/global.css" />
 
@@ -10,51 +10,72 @@
     <script src="../node_modules/page-flip/dist/js/page-flip.browser.js"></script>
     <!-- pdfjs-lib cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-</head>
-<body>
-    <section class="flip-page-header">
+  </head>
+  <body>
+    <header class="flip-page-header">
+      <div class="flip-page-header-container container">
         <a href="./book-details.html">
-            <img src="../assets/flip-page/Vector.png" alt="გადადით უკან">
+          <img src="../assets/flip-page/Vector.png" alt="გადადით უკან" />
         </a>
         <div class="flip-navbar-right">
-            <p class="main-chapter" id="main-chapter">ძირითადი ნაწილი</p>
-            <div id="menu" style="cursor: pointer;">
-                <img src="../assets/flip-page/burger-menu.png" alt="ჩამონათვალი">
-            </div>
+          <p class="main-chapter" id="main-chapter">ძირითადი ნაწილი</p>
+          <div id="menu" style="cursor: pointer">
+            <img src="../assets/flip-page/burger-menu.png" alt="ჩამონათვალი" />
+          </div>
 
-            <a href="../assets/flip-page/განდეგილი 1957.pdf" download="book.pdf" id="menu">
-                <img src="../assets/flip-page/download.png" alt="ჩამოტვირთე" id="download">
-            </a>
+          <a
+            href="../assets/flip-page/განდეგილი 1957.pdf"
+            download="book.pdf"
+            id="menu"
+          >
+            <img
+              src="../assets/flip-page/download.png"
+              alt="ჩამოტვირთე"
+              id="download"
+            />
+          </a>
         </div>
-    </section>
+      </div>
+    </header>
 
     <section id="main">
-        <section id="main-content">
-            <div id="pdf-container">
-                <img src="../assets/flip-page/open-book-transparent-background-png_185216-741.png">
-            </div>
-        </section>
-
-        <section id="flip-page-footer">
-            <div class="page">
-                <!-- <i class='bx bx-chevron-left' id="prev" style="cursor: pointer;"></i> -->
-                <img src="../assets/flip-page/arrow-left.png" id="prev" alt="მარცხნივ გადასვლა" style="cursor: pointer;">
-                <p class="current-page" id="current-page">0</p>
-                <p>/</p>
-                <p class="total-pages" id="total-pages"></p>
-                <img src="../assets/flip-page/arrow-right.png" id="next" alt="მარჯვნივ გადასვლა" style="cursor: pointer;">
-                <!-- <i class='bx bx-chevron-right' id="next" style="cursor: pointer;"></i> -->
-            </div>
-        </section>
+      <section id="main-content">
+        <div id="pdf-container">
+          <img
+            src="../assets/flip-page/open-book-transparent-background-png_185216-741.png"
+          />
+        </div>
+      </section>
     </section>
+    <footer id="flip-page-footer">
+      <div class="container page">
+        <!-- <i class='bx-chevron-left bx' id="prev" style="cursor: pointer;"></i> -->
+        <img
+          src="../assets/flip-page/arrow-left.png"
+          id="prev"
+          alt="მარცხნივ გადასვლა"
+          style="cursor: pointer"
+        />
+        <p class="current-page" id="current-page">0</p>
+        <p>/</p>
+        <p class="total-pages" id="total-pages"></p>
+        <img
+          src="../assets/flip-page/arrow-right.png"
+          id="next"
+          alt="მარჯვნივ გადასვლა"
+          style="cursor: pointer"
+        />
+        <!-- <i class='bx-chevron-right bx' id="next" style="cursor: pointer;"></i> -->
+      </div>
+    </footer>
 
     <!-- adding loading -->
     <section id="loader">
-        <img src="../assets/flip-page/loader-img.png" alt="წიგნი">
-        <h1>მიმდინარეობს წიგნის ჩატვირთვა</h1>
-        <a href="../index.html">დაბრუნდით მთავარ გვერდზე</a>
+      <img src="../assets/flip-page/loader-img.png" alt="წიგნი" />
+      <h1>მიმდინარეობს წიგნის ჩატვირთვა</h1>
+      <a href="../index.html">დაბრუნდით მთავარ გვერდზე</a>
     </section>
 
     <script src="../js/flip-page.js"></script>
-</body>
+  </body>
 </html>
