--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1325,25 +1325,27 @@ body {
 }
 
 .flip-page-header {
+  padding: 23px 161px 23px 120px;
+  background-color: #0077ff;
+  color: white;
+}
+.flip-page-header .flip-page-header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 23px 161px 23px 120px;
-  background-color: #0077FF;
-  color: white;
 }
-.flip-page-header .flip-navbar-right {
+.flip-page-header .flip-page-header-container .flip-navbar-right {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 110px;
   cursor: pointer;
 }
-.flip-page-header .flip-navbar-right p {
+.flip-page-header .flip-page-header-container .flip-navbar-right p {
   font-family: FiraGo400;
   font-size: 24px;
 }
-.flip-page-header .menu-ul {
+.flip-page-header .flip-page-header-container .menu-ul {
   background-color: white;
   color: black;
   position: absolute;
@@ -1353,7 +1355,7 @@ body {
   overflow: hidden;
   z-index: 100;
 }
-.flip-page-header .menu-li {
+.flip-page-header .flip-page-header-container .menu-li {
   font-size: 20px;
   width: 223px;
   height: 46px;
@@ -1364,15 +1366,15 @@ body {
   transition: background-color 0.3s, color 0.3s;
   cursor: pointer;
 }
-.flip-page-header .menu-li:last-child {
+.flip-page-header .flip-page-header-container .menu-li:last-child {
   border-bottom: none;
 }
-.flip-page-header .menu-li:hover {
-  background-color: #0468DC;
+.flip-page-header .flip-page-header-container .menu-li:hover {
+  background-color: #0468dc;
   color: #fff;
   font-size: 24px;
 }
-.flip-page-header .menu-li.hover {
+.flip-page-header .flip-page-header-container .menu-li.hover {
   background-color: #022859;
   color: #fff;
   font-size: 24px;
@@ -1386,8 +1388,6 @@ body {
   align-items: center;
   padding: 120px;
   position: relative;
-  max-height: calc(100vh - 200px);
-  overflow: hidden;
 }
 #main-content #loader {
   position: absolute;
@@ -1400,6 +1400,7 @@ body {
 }
 #main-content #pdf-container {
   visibility: hidden;
+  overflow: hidden;
 }
 #main-content #pdf-container .my-page {
   background-color: #fff;
@@ -1408,9 +1409,10 @@ body {
 }
 
 #flip-page-footer {
+  display: none !important;
   width: 100%;
   height: 96px;
-  background-color: #0077FF;
+  background-color: #0077ff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1418,6 +1420,7 @@ body {
 #flip-page-footer .page {
   display: flex;
   align-items: center;
+  justify-content: center;
   color: white;
   font-size: 26px;
   gap: 22px;
@@ -1447,7 +1450,7 @@ body {
   font-family: FiraGo700;
 }
 #loader a {
-  color: #0468DC;
+  color: #0468dc;
   font-size: 24px;
   font-family: Firago500;
   text-decoration: underline;
