--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -1,144 +1,149 @@
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-    font-family: FiraGo;
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  font-family: FiraGo;
 }
 
-.flip-page-header{
+.flip-page-header {
+  padding: 23px 161px 23px 120px;
+  background-color: #0077ff;
+  color: white;
+
+  .flip-page-header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 23px 161px 23px 120px;
-    background-color: #0077FF;
-    color: white;
+    .flip-navbar-right {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 110px;
+      cursor: pointer;
 
-    .flip-navbar-right{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 110px;
-        cursor: pointer;
-
-        p{
-         font-family: FiraGo400;
-         font-size: 24px;   
-        }
+      p {
+        font-family: FiraGo400;
+        font-size: 24px;
+      }
     }
 
-    .menu-ul{
-        background-color: white;
-        color: black;
-        position: absolute;
-        top: 96px;
-        border-radius: 10px;
-        border: 1px solid grey;
-        overflow: hidden;
-        z-index: 100;
+    .menu-ul {
+      background-color: white;
+      color: black;
+      position: absolute;
+      top: 96px;
+      border-radius: 10px;
+      border: 1px solid grey;
+      overflow: hidden;
+      z-index: 100;
     }
-    .menu-li{
-        font-size: 20px;
-        width: 223px;
-        height: 46px;
-        padding-left: 16px;
-        border-bottom: 1px solid black;
-        display: flex;
-        align-items: center;
-        transition: background-color 0.3s, color 0.3s;  
-        cursor: pointer;
+    .menu-li {
+      font-size: 20px;
+      width: 223px;
+      height: 46px;
+      padding-left: 16px;
+      border-bottom: 1px solid black;
+      display: flex;
+      align-items: center;
+      transition: background-color 0.3s, color 0.3s;
+      cursor: pointer;
     }
     .menu-li:last-child {
-        border-bottom: none;
+      border-bottom: none;
     }
-    .menu-li:hover{
-        background-color: #0468DC;
-        color: #fff;
-        font-size: 24px;
+    .menu-li:hover {
+      background-color: #0468dc;
+      color: #fff;
+      font-size: 24px;
     }
-    .menu-li.hover{
-        background-color: #022859;
-        color: #fff;
-        font-size: 24px;
+    .menu-li.hover {
+      background-color: #022859;
+      color: #fff;
+      font-size: 24px;
     }
+  }
 }
 
-#main-content{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
-    padding: 120px;
-    position: relative;
-    max-height: calc(100vh - 200px);
+#main-content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  padding: 120px;
+  position: relative;
+
+  #loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 60px;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    visibility: visible;
+  }
+
+  #pdf-container {
+    visibility: hidden;
     overflow: hidden;
-    #loader {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 60px;
-        transform: translate(-50%, -50%);
-        z-index: 1000;
-        visibility: visible;
-    }
-    
-    #pdf-container{
-        visibility: hidden;
 
-        .my-page{
-            background-color: #fff;
-            box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.2), 0px 0px 20px rgba(0, 0, 0, 0.2);
-            border-radius: 4px;
-        }
+    .my-page {
+      background-color: #fff;
+      box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.2),
+        0px 0px 20px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
     }
+  }
 }
 
-#flip-page-footer{
-    width: 100%;
-    height: 96px;
-    background-color: #0077FF;
+#flip-page-footer {
+  display: none !important;
+  width: 100%;
+  height: 96px;
+  background-color: #0077ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .page {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 26px;
+    gap: 22px;
 
-    .page{
-        display: flex;
-        align-items: center;
-        color: white;
-        font-size: 26px;
-        gap: 22px;
-
-        .current-page{
-            padding: 4px 8px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 6px;
-        }
+    .current-page {
+      padding: 4px 8px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 6px;
     }
+  }
 }
 
-#loader{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-    flex: 1;
+#loader {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  flex: 1;
 
-    img{
-        width: 123px;
-        height: 124px;
-    }
-    h1{
-        font-size: 48px;
-        color: #022859;
-        font-family: FiraGo700;
-    }
-    a{
-        color: #0468DC;
-        font-size: 24px;
-        font-family: Firago500;
-        text-decoration: underline;
-    }
+  img {
+    width: 123px;
+    height: 124px;
+  }
+  h1 {
+    font-size: 48px;
+    color: #022859;
+    font-family: FiraGo700;
+  }
+  a {
+    color: #0468dc;
+    font-size: 24px;
+    font-family: Firago500;
+    text-decoration: underline;
+  }
 }
