--- a/view/book-details.html
+++ b/view/book-details.html
@@ -11,7 +11,7 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="header_wrapper container">
+      <div class="container header_wrapper">
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
