--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1316,10 +1316,9 @@ body {
           text-decoration-skip-ink: none;
 }
 
-body {
+.main-body-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   min-height: 100vh;
   font-family: FiraGo;
 }
