--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -1,7 +1,6 @@
-body {
+.main-body-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   min-height: 100vh;
   font-family: FiraGo;
 }
