--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -11,7 +11,7 @@
     <!-- pdfjs-lib cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   </head>
-  <body>
+  <body class="main-body-container">
     <header class="flip-page-header">
       <div class="flip-page-header-container container">
         <a href="./book-details.html">
