bugfix/flip-page

--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -38,15 +38,19 @@
       </div>
     </header>
 
-    <section id="main">
+    <main id="main">
       <section id="main-content">
-        <div id="pdf-container">
-          <img
-            src="../assets/flip-page/open-book-transparent-background-png_185216-741.png"
-          />
-        </div>
+        <div id="pdf-container"></div>
       </section>
+    </main>
+
+    <!-- adding loading -->
+    <section id="loader">
+      <img src="../assets/flip-page/loader-img.png" alt="წიგნი" />
+      <h1>მიმდინარეობს წიგნის ჩატვირთვა<span class="dots"></span></h1>
+      <a href="../index.html">დაბრუნდით მთავარ გვერდზე</a>
     </section>
+
     <footer id="flip-page-footer">
       <div class="container page">
         <!-- <i class='bx-chevron-left bx' id="prev" style="cursor: pointer;"></i> -->
@@ -68,13 +72,6 @@
         <!-- <i class='bx-chevron-right bx' id="next" style="cursor: pointer;"></i> -->
       </div>
     </footer>
-
-    <!-- adding loading -->
-    <section id="loader">
-      <img src="../assets/flip-page/loader-img.png" alt="წიგნი" />
-      <h1>მიმდინარეობს წიგნის ჩატვირთვა</h1>
-      <a href="../index.html">დაბრუნდით მთავარ გვერდზე</a>
-    </section>
 
     <script src="../js/flip-page.js"></script>
   </body>
