--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1322,6 +1322,9 @@ body {
   min-height: 100vh;
   font-family: FiraGo;
 }
+.main-body-container main {
+  flex: 1;
+}
 
 .flip-page-header {
   padding: 23px 161px 23px 120px;
@@ -1388,15 +1391,6 @@ body {
   padding: 120px;
   position: relative;
 }
-#main-content #loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 60px;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
-  visibility: visible;
-}
 #main-content #pdf-container {
   visibility: hidden;
   overflow: hidden;
@@ -1408,7 +1402,6 @@ body {
 }
 
 #flip-page-footer {
-  display: none !important;
   width: 100%;
   height: 96px;
   background-color: #0077ff;
@@ -1442,15 +1435,43 @@ body {
 #loader img {
   width: 123px;
   height: 124px;
+  animation: rotate 2s linear infinite;
 }
 #loader h1 {
   font-size: 48px;
   color: #022859;
   font-family: FiraGo700;
+  display: flex;
+  align-items: center;
+}
+#loader h1 .dots {
+  margin-left: 8px;
+}
+#loader h1 .dots::after {
+  content: "";
+  display: inline-block;
+  animation: dots 1.5s steps(3, end) infinite;
 }
 #loader a {
   color: #0468dc;
   font-size: 24px;
   font-family: Firago500;
   text-decoration: underline;
+}
+#loader a:hover {
+  text-decoration: none;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.my-page img {
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  backface-visibility: hidden;
 }/*# sourceMappingURL=global.css.map */
