--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   min-height: 100vh;
   font-family: FiraGo;
+
+  main {
+    flex: 1;
+  }
 }
 
 .flip-page-header {
@@ -73,16 +77,6 @@
   padding: 120px;
   position: relative;
 
-  #loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 60px;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    visibility: visible;
-  }
-
   #pdf-container {
     visibility: hidden;
     overflow: hidden;
@@ -97,7 +91,6 @@
 }
 
 #flip-page-footer {
-  display: none !important;
   width: 100%;
   height: 96px;
   background-color: #0077ff;
@@ -133,16 +126,50 @@
   img {
     width: 123px;
     height: 124px;
+    animation: rotate 2s linear infinite;
   }
+
   h1 {
     font-size: 48px;
     color: #022859;
     font-family: FiraGo700;
+    display: flex;
+    align-items: center;
+
+    .dots {
+      margin-left: 8px; // Spacing between text and dots
+      &::after {
+        content: "";
+        display: inline-block;
+        animation: dots 1.5s steps(3, end) infinite;
+      }
+    }
   }
+
   a {
     color: #0468dc;
     font-size: 24px;
     font-family: Firago500;
     text-decoration: underline;
+
+    &:hover {
+      text-decoration: none; // Hover effect for better interactivity
+    }
   }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.my-page img {
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
