--- a/view/book-details.html
+++ b/view/book-details.html
@@ -45,7 +45,11 @@
       <section class="book-container">
         <div class="cover-wrapper">
           <img src="../assets/book-card-img.png" alt="book cover image" />
-          <button>წაკითხვა (PDF)</button>
+          <button>
+            <a href="flip-page.html" style="text-decoration: none; color: white"
+              >წაკითხვა (PDF)</a
+            >
+          </button>
         </div>
         <div class="info-wrapper">
           <div class="main-info">
