--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -895,9 +895,10 @@ header .header_wrapper .burger_menu .line {
 
 .book-main {
   background-color: #f5f5f5;
+  max-width: 1900px;
+  margin: auto;
 }
 .book-main .book-container {
-  max-width: 1140px;
   padding: 76px 6.2% 63px;
   display: flex;
   flex-direction: row;
@@ -915,7 +916,7 @@ header .header_wrapper .burger_menu .line {
   margin-bottom: 44px;
   border-radius: 20px;
 }
-.book-main .book-container .cover-wrapper button {
+.book-main .book-container .cover-wrapper a {
   background-color: #203a9c;
   color: #fff;
   padding: 32px 116px;
@@ -925,6 +926,13 @@ header .header_wrapper .burger_menu .line {
   border: none;
   cursor: pointer;
   font-family: "FiraGO400", sans-serif;
+  background-color: #0468dc;
+  padding: 17px 0;
+  text-align: center;
+  transition: background-color 0.3s;
+}
+.book-main .book-container .cover-wrapper a:hover {
+  background-color: #0077ff;
 }
 .book-main .book-container .info-wrapper {
   display: flex;
@@ -937,16 +945,18 @@ header .header_wrapper .burger_menu .line {
 .book-main .book-container .info-wrapper .main-info h3 {
   margin-bottom: 28px;
   font-family: "FiraGO400", sans-serif;
-  font-size: 48px;
-  font-weight: bold;
-  color: #000;
+  font-size: 36px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #333;
 }
 .book-main .book-container .info-wrapper .main-info p {
   margin-bottom: 40px;
   font-family: "FiraGO400", sans-serif;
-  font-size: 24px;
-  font-weight: normal;
-  color: #555;
+  font-size: 18px;
+  letter-spacing: 0.2px;
+  font-weight: 600;
+  color: rgba(60, 60, 67, 0.6);
 }
 .book-main .book-container .info-wrapper .main-info .book-info {
   display: flex;
@@ -961,13 +971,14 @@ header .header_wrapper .burger_menu .line {
 }
 .book-main .book-container .info-wrapper .main-info .book-info div img {
   width: 20px;
-  height: 17.5px;
+  height: 20px;
+  filter: opacity(50%);
 }
 .book-main .book-container .info-wrapper .main-info .book-info div span {
   font-family: "FiraGO400", sans-serif;
   font-size: 16px;
   font-weight: normal;
-  color: #000;
+  color: rgba(60, 60, 67, 0.6);
 }
 .book-main .book-container .info-wrapper .button-wrapper {
   margin: 75px 0 24px;
@@ -977,24 +988,19 @@ header .header_wrapper .burger_menu .line {
   gap: 46px;
 }
 .book-main .book-container .info-wrapper .button-wrapper button {
-  background-color: red;
-  color: #000;
-  padding: 0 0 7px;
-  border: none;
-  border-radius: 0;
-  font-family: "FiraGO";
+  transition: color 0.3s;
+  height: 40px;
+  /*@include chooseButton();*/
+  font-family: "FiraGO400", sans-serif;
+  color: #333;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
   border: none;
-  cursor: pointer;
   background-color: transparent;
 }
-.book-main .book-container .info-wrapper .button-wrapper button:active {
-  color: #112f91;
-}
-.book-main .book-container .info-wrapper .button-wrapper button:focus {
-  color: #112f91;
-  border-bottom: #112f91 solid 3px;
+.book-main .book-container .info-wrapper .button-wrapper button:hover {
+  color: #0468dc;
+  border-bottom: 3px solid #0468dc;
 }
 .book-main .book-container .info-wrapper .anotation-section {
   width: 100%;
@@ -1004,10 +1010,11 @@ header .header_wrapper .burger_menu .line {
 .book-main .book-container .info-wrapper .anotation-section p {
   margin-bottom: 32px;
   font-family: "FiraGO400", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: normal;
   line-height: 1.5;
-  color: #000;
+  color: #333;
+  text-align: justify;
 }
 .book-main .book-container .info-wrapper .anotation-section div {
   display: flex;
@@ -1018,7 +1025,8 @@ header .header_wrapper .burger_menu .line {
   font-family: "FiraGO400", sans-serif;
   font-size: 16px;
   font-weight: normal;
-  color: #000;
+  color: #333;
+  filter: opacity(70%);
 }
 .book-main .book-container .info-wrapper .feature-section ul {
   width: 100%;
@@ -1030,15 +1038,14 @@ header .header_wrapper .burger_menu .line {
   padding-bottom: 16px;
   border-bottom: 1px dashed #d0d0d0;
   font-family: "FiraGO400", sans-serif;
-  font-size: 24px;
-  font-weight: normal;
-  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  color: #333;
 }
 .book-main .book-container .info-wrapper .feature-section ul li:last-child {
   border-bottom: 0;
 }
 .book-main .book-container .info-wrapper .searching-section {
-  max-width: 1140px;
   margin-top: 40px;
 }
 .book-main .book-container .info-wrapper .searching-section .each_content_line {
@@ -1050,7 +1057,7 @@ header .header_wrapper .burger_menu .line {
   font-family: "FiraGO400", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  color: #000;
+  color: #333;
   line-height: 21.6px;
 }
 .book-main .book-container .info-wrapper .searching-section .each_content_line p:nth-child(2) {
@@ -1072,6 +1079,7 @@ header .header_wrapper .burger_menu .line {
   margin-bottom: 179px;
   padding: 36px 6.8%;
   background-color: #fff;
+  position: relative;
 }
 .book-main .similar-books h3 {
   margin-bottom: 48px;
@@ -1079,6 +1087,20 @@ header .header_wrapper .burger_menu .line {
   font-size: 36px;
   font-weight: 600;
   color: #000;
+}
+.book-main .similar-books .icon {
+  font-size: 50px;
+  color: #0468dc;
+}
+.book-main .similar-books .icon-left {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+}
+.book-main .similar-books .icon-right {
+  position: absolute;
+  top: 50%;
+  right: 3%;
 }
 .book-main .similar-books .cards-wrapper {
   display: flex;
