--- a/view/book-details.html
+++ b/view/book-details.html
@@ -7,6 +7,7 @@
 
     <!-- css link -->
     <link rel="stylesheet" href="../styles/css/global.css" />
+    <link rel="stylesheet" href="../styles/page/_book-details.scss" />
   </head>
   <body>
     <!-- Header -->
@@ -24,8 +25,8 @@
           <div class="navigation">
             <nav>
               <ul>
-                <li><a href="#">მთავარი</a></li>
-                <li><a href="#">პროექტის შესახებ</a></li>
+                <li><a href="../index.html">მთავარი</a></li>
+                <li><a href="about-project.html">პროექტის შესახებ</a></li>
               </ul>
             </nav>
           </div>
@@ -45,11 +46,7 @@
       <section class="book-container">
         <div class="cover-wrapper">
           <img src="../assets/book-card-img.png" alt="book cover image" />
-          <button>
-            <a href="flip-page.html" style="text-decoration: none; color: white"
-              >წაკითხვა (PDF)</a
-            >
-          </button>
+          <a href="flip-page.html">წაკითხვა (PDF)</a>
         </div>
         <div class="info-wrapper">
           <div class="main-info">
@@ -158,6 +155,7 @@
 
       <section class="similar-books">
         <h3>მსგავსი წიგნები</h3>
+        <ion-icon class="icon-left icon" name="chevron-back-outline"></ion-icon>
         <div class="cards-wrapper">
           <div class="card">
             <img src="../assets/marx.png" alt="author photo" />
@@ -230,6 +228,10 @@
             </div>
           </div>
         </div>
+        <ion-icon
+          class="icon-right icon"
+          name="chevron-forward-outline"
+        ></ion-icon>
       </section>
     </main>
 
@@ -281,5 +283,13 @@
 
     <!-- JavaScript link -->
     <script src="../js/book-details.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
