footer updated to the latest version

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -198,7 +198,7 @@
                       id="css-email"
                       src="../assets/email-icon.svg"
                       alt="email icon"
-                    />info@iliauni@edu.ge</a
+                    />library@iliauni@edu.ge</a
                   >
                 </li>
 
@@ -220,7 +220,7 @@
                     <img
                       src="../assets/link-icon.svg"
                       alt="link icon"
-                    />https://library.iliauni.edu.ge/</a
+                    />library.iliauni.edu.ge</a
                   >
                 </li>
               </ul>
@@ -239,7 +239,7 @@
                 <img src="../assets/unilab-logo.svg" alt="unilab-logo"
               /></a>
             </div>
-            <p>ვებსაიტზე იმუშავა უნილაბის გუნდმა</p>
+            <p>ვებგვერდზე იმუშავა უნილაბის გუნდმა</p>
           </div>
         </div>
       </section>
