--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -79,19 +79,26 @@
     .unilab-team-container {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: end;
 
       .logo-container {
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: end;
+        gap: 25px;
+
+        img {
+          height: 80px;
+        }
       }
 
       p {
         margin-top: 24px;
         font-size: 14px;
         line-height: 16.8px;
+        font-weight: 400;
+        font-family: FiraGO400;
       }
     }
 
