updated contacts info, and header font-size

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -131,7 +131,7 @@
                   <img
                     src="../assets/phone-icon--blue.svg"
                     alt="phone icon"
-                  />(+995 32) 222 00 09</a
+                  />(+995 32) 222 00 09 (116)</a
                 >
               </li>
               <li>
@@ -140,7 +140,7 @@
                     id="css-email"
                     src="../assets/email-icon--blue.svg"
                     alt="email icon"
-                  />info@iliauni@edu.ge</a
+                  />library@iliauni@edu.ge</a
                 >
               </li>
               <li>
@@ -158,9 +158,9 @@
               <li>
                 <a href="https://www.facebook.com/Iliauni">
                   <img
-                    src="../assets/facebook-icon--blue.svg"
-                    alt="facebook icon"
-                  />www.facebook.com/linki</a
+                    src="../assets/link-icon--blue.svg"
+                    alt="link icon"
+                  />library.iliauni.edu.ge</a
                 >
               </li>
             </ul>
