--- a/view/about-project.html
+++ b/view/about-project.html
@@ -135,7 +135,7 @@
                 >
               </li>
               <li>
-                <a href="mailto:info@iliauni@edu.ge">
+                <a href="mailto:library@iliauni@edu.ge">
                   <img
                     id="css-email"
                     src="../assets/email-icon--blue.svg"
@@ -156,7 +156,7 @@
                 >
               </li>
               <li>
-                <a href="https://www.facebook.com/Iliauni">
+                <a href="library.iliauni.edu.ge">
                   <img
                     src="../assets/link-icon--blue.svg"
                     alt="link icon"
