--- a/view/about-project.html
+++ b/view/about-project.html
@@ -193,7 +193,7 @@
                   >
                 </li>
                 <li>
-                  <a href="mailto:info@iliauni@edu.ge">
+                  <a href="mailto:library@iliauni@edu.ge">
                     <img
                       id="css-email"
                       src="../assets/email-icon.svg"
