--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -15,7 +15,7 @@ body {
 
 .main-content-wrapper {
   max-width: 1680px;
-  width: 100%;
+  //width: 100%;
   margin: 0 auto;
   padding-top: 64px;
 
@@ -345,11 +345,14 @@ body {
     .card {
       position: relative;
       margin: 0;
-      border: 1px solid #33333360;
       border-radius: 10px;
       overflow: hidden;
       width: 260px;
       height: 367px;
+
+      img{
+        border-radius: 10px;
+      }
 
       .book-cover {
         width: 100%;
@@ -382,16 +385,24 @@ body {
 
         .title-share {
           background-color: white;
+          border: 1px solid #3C3C4399;
           padding: 12px 12px 16px;
+          border-bottom-right-radius: 10px;
+          border-bottom-left-radius: 10px;
 
           .title-share-default {
             display: flex;
             justify-content: space-between;
+            overflow: hidden;
 
             h2 {
               font-family: FiraGo600;
               color: $card-title;
-              font-size: 1rem;
+              font-size: 16px;
+              color: #333333;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
             }
           }
 
@@ -423,7 +434,7 @@ body {
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  margin: 124px 0 112px;
+  margin: 36px 0 64px;
 
   .pagination-wrapper {
     display: flex;
