create flip-page v2
update flip-page:

1.removing footer
2.adding flip-page function in header
3.fixing some style

--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -91,13 +91,9 @@
 }
 
 #flip-page-footer {
-  width: 100%;
-  height: 96px;
-  background-color: #0077ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   .page {
     display: flex;
     align-items: center;
