--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1424,12 +1424,9 @@ body {
 }
 
 #flip-page-footer {
-  width: 100%;
-  height: 96px;
-  background-color: #0077ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 #flip-page-footer .page {
   display: flex;
