--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1346,6 +1346,7 @@ body {
 }
 .main-body-container main {
   flex: 1;
+  background-color: white;
 }
 
 .flip-page-header {
@@ -1365,6 +1366,11 @@ body {
   gap: 110px;
   cursor: pointer;
 }
+.flip-page-header .flip-page-header-container .flip-navbar-right #main-chapter {
+  text-align: center;
+  width: auto;
+  max-width: 250px;
+}
 .flip-page-header .flip-page-header-container .flip-navbar-right p {
   font-family: FiraGo400;
   font-size: 24px;
@@ -1375,20 +1381,25 @@ body {
   position: absolute;
   top: 96px;
   border-radius: 10px;
-  border: 1px solid grey;
+  border: 1px solid #333333;
   overflow: hidden;
   z-index: 100;
 }
 .flip-page-header .flip-page-header-container .menu-li {
+  font-family: FiraGo400;
   font-size: 20px;
-  width: 223px;
+  width: auto;
+  min-width: 223px;
+  max-width: 100%;
   height: 46px;
   padding-left: 16px;
-  border-bottom: 1px solid black;
+  padding-right: 16px;
+  border-bottom: 1px solid #333333;
   display: flex;
   align-items: center;
   transition: background-color 0.3s, color 0.3s;
   cursor: pointer;
+  color: #333333;
 }
 .flip-page-header .flip-page-header-container .menu-li:last-child {
   border-bottom: none;
@@ -1423,12 +1434,12 @@ body {
   border-radius: 4px;
 }
 
-#flip-page-footer {
+#flip-pages {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
-#flip-page-footer .page {
+#flip-pages .page {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1436,7 +1447,7 @@ body {
   font-size: 26px;
   gap: 22px;
 }
-#flip-page-footer .page .current-page {
+#flip-pages .page .current-page {
   padding: 4px 8px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 6px;
@@ -1450,11 +1461,12 @@ body {
   align-items: center;
   gap: 32px;
   flex: 1;
+  background-color: white;
 }
 #loader img {
-  width: 123px;
-  height: 124px;
-  animation: rotate 2s linear infinite;
+  width: 200px;
+  height: 190px;
+  mix-blend-mode: multiply;
 }
 #loader h1 {
   font-size: 48px;
@@ -1472,7 +1484,7 @@ body {
   animation: dots 1.5s steps(3, end) infinite;
 }
 #loader a {
-  color: #0468dc;
+  color: #0468DC;
   font-size: 24px;
   font-family: Firago500;
   text-decoration: underline;
