--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -246,6 +246,7 @@ body {
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
+            //gap: 26px;
 
             img {
               rotate: 270deg;
