--- a/view/book-details.html
+++ b/view/book-details.html
@@ -44,20 +44,17 @@
     <main class="book-main">
       <section class="book-container">
         <div class="cover-wrapper">
-          <img src="../assets/book-card-img.png" alt="book cover image" />
+          <img src="../assets/landing-page-cards/motkhrobebi.jpg" alt="book cover image" />
           <button>წაკითხვა (PDF)</button>
         </div>
         <div class="info-wrapper">
           <div class="main-info">
-            <h3>
-              THE EVALUATION AND LIFETIME APPOINTMENT OF JUDGES ON PROBATION:
-              Assessment of the Legislation and Practice
-            </h3>
-            <p>იმანუელ კანტი | წელი</p>
+            <h3>განდეგილი</h3>
+            <p>ილია ჭავჭავაძე | 1957</p>
             <div class="book-info">
               <div>
                 <img src="../assets/book-icon.svg" alt="book icon" />
-                <span>გვერდების რადენობა: 47</span>
+                <span>გვერდების რადენობა: 23</span>
               </div>
               <div>
                 <img src="../assets/language-icon.svg" alt="language icon" />
@@ -68,7 +65,7 @@
                   src="../assets/book-check-icon.svg"
                   alt="book check icon"
                 />
-                <span>გამომცემლობა: ილიაილიაილია</span>
+                <span>გამომცემლობა:  საბჭოთა მწერალი</span>
               </div>
             </div>
           </div>
@@ -91,6 +88,7 @@
             </p>
             <div>
               <span> © ილიას სახელმწიფო უნივერსიტეტის </span>
+              <span> Ilia State University Library</span>
               <span> გ.წერეთლის აღმოსვლეთმცოდნეობის ინსტიტუტი </span>
               <span>
                 G.Tsereteli Institute of Oriental Studies of the Ilia State
@@ -102,20 +100,20 @@
           <!-- სარჩევის დიზაინი არაა -->
           <div class="searching-section">
             <div class="each_content_line">
-              <p>თავი 1. შესავალი თანამედროვე აზროვნებაში</p>
-              <p>............................</p>
+              <p>თავი 1.</p>
+              <p>..........................................</p>
               <p>გვ.3</p>
             </div>
 
             <div class="each_content_line">
-              <p>თავი 2. წინათქმა</p>
-              <p>.........................................................</p>
+              <p>თავი 2.</p>
+              <p>..........................................</p>
               <p>გვ.6</p>
             </div>
 
             <div class="each_content_line">
-              <p>თავი 3. მეორე ტრაქტატი სამოქალაქსო მმართველობაზე</p>
-              <p>.................</p>
+              <p>თავი 3.</p>
+              <p>.........................................</p>
               <p>გვ.11</p>
             </div>
           </div>
@@ -153,74 +151,76 @@
       </section>
 
       <section class="similar-books">
-        <h3>მსგავსი წიგნები</h3>
-        <div class="cards-wrapper">
-          <div class="card">
-            <img src="../assets/marx.png" alt="author photo" />
-            <div>
-              <h4>კარლ მარქსი</h4>
-              <p>გამომცემლობა</p>
+        <div class="similar-books-container">
+          <h3>მსგავსი წიგნები</h3>
+          <div class="cards-wrapper">
+            <div class="card">
+              <img src="../assets/marx.png" alt="author photo" />
               <div>
-                <span>2024</span>
+                <h4>კარლ მარქსი</h4>
+                <p>გამომცემლობა</p>
                 <div>
-                  <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                  <span>29</span>
+                  <span>2024</span>
+                  <div>
+                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
+                    <span>29</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/jung.png" alt="author photo" />
-            <div>
-              <h4>კარლ გუსტავ იუნგი</h4>
-              <p>გამომცემლობა</p>
+            <div class="card">
+              <img src="../assets/jung.png" alt="author photo" />
               <div>
-                <span>2024</span>
+                <h4>კარლ გუსტავ იუნგი</h4>
+                <p>გამომცემლობა</p>
                 <div>
-                  <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                  <span>29</span>
+                  <span>2024</span>
+                  <div>
+                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
+                    <span>29</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/hobbes.png" alt="author photo" />
-            <div>
-              <h4>თომას ჰობსი</h4>
-              <p>გამომცემლობა</p>
+            <div class="card">
+              <img src="../assets/hobbes.png" alt="author photo" />
               <div>
-                <span>2024</span>
+                <h4>თომას ჰობსი</h4>
+                <p>გამომცემლობა</p>
                 <div>
-                  <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                  <span>29</span>
+                  <span>2024</span>
+                  <div>
+                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
+                    <span>29</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/freud.png" alt="author photo" />
-            <div>
-              <h4>ზიგმუნდ ფროიდი</h4>
-              <p>გამომცემლობა</p>
+            <div class="card">
+              <img src="../assets/freud.png" alt="author photo" />
               <div>
-                <span>2024</span>
+                <h4>ზიგმუნდ ფროიდი</h4>
+                <p>გამომცემლობა</p>
                 <div>
-                  <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                  <span>29</span>
+                  <span>2024</span>
+                  <div>
+                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
+                    <span>29</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/Schrödinger.png" alt="author photo" />
-            <div>
-              <h4>ერვინ შროდინგერი</h4>
-              <p>გამომცემლობა</p>
+            <div class="card">
+              <img src="../assets/Schrödinger.png" alt="author photo" />
               <div>
-                <span>2024</span>
+                <h4>ერვინ შროდინგერი</h4>
+                <p>გამომცემლობა</p>
                 <div>
-                  <img src="../assets/mdi_eye.svg" alt="seen icon" />
-                  <span>29</span>
+                  <span>2024</span>
+                  <div>
+                    <img src="../assets/mdi_eye.svg" alt="seen icon" />
+                    <span>29</span>
+                  </div>
                 </div>
               </div>
             </div>
