--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -26,11 +26,11 @@ body {
   .filter-books-wrapper {
     display: flex;
     flex-direction: row;
+    gap: 70px;
 
     .filter-section {
       max-width: 402px;
       position: relative;
-      margin-right: 100px;
 
       @media (max-width: 1040px) {
         display: none;
@@ -246,7 +246,7 @@ body {
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            //gap: 26px;
+            gap: 26px;
 
             img {
               rotate: 270deg;
@@ -258,7 +258,7 @@ body {
               position: relative;
               border: 1px solid #3c3c4399;
               border-radius: 8px;
-              width: 145px;
+              width: 170px;
               height: 54px;
               padding: 17px 16px;
               cursor: pointer;
@@ -351,7 +351,7 @@ body {
       width: 260px;
       height: 367px;
 
-      img{
+      img {
         border-radius: 10px;
       }
 
@@ -386,7 +386,7 @@ body {
 
         .title-share {
           background-color: white;
-          border: 1px solid #3C3C4399;
+          border: 1px solid #3c3c4399;
           padding: 12px 12px 16px;
           border-bottom-right-radius: 10px;
           border-bottom-left-radius: 10px;
@@ -443,9 +443,7 @@ body {
     align-items: center;
     gap: 20px;
 
-    
-
-    .pagination-numbers{
+    .pagination-numbers {
       display: flex;
       gap: 4px;
 
@@ -458,7 +456,7 @@ body {
       font-size: 24px;
       font-family: FiraGO700;
       font-weight: 350;
-      color: #3C3C4399;
+      color: #3c3c4399;
       padding: 5px 10px;
       border-radius: 8px;
 
