--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -34,7 +34,6 @@
       a:hover {
         background-color: #0077ff;
       }
-
     }
 
     .info-wrapper {
@@ -107,12 +106,12 @@
           border: none;
           background-color: transparent;
         }
-        
+
         button:hover {
           color: #0468dc;
           border-bottom: 3px solid #0468dc;
         }
-
+      }
       .anotation-section {
         width: 100%;
         display: flex;
