--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -68,12 +68,12 @@
     .menu-li:hover {
       background-color: #0468dc;
       color: #fff;
-      font-size: 24px;
+      // font-size: 24px;
     }
     .menu-li.hover {
       background-color: #022859;
       color: #fff;
-      font-size: 24px;
+      // font-size: 24px;
     }
   }
 }
