--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -51,14 +51,15 @@
     .usage-container {
       display: flex;
       flex-direction: column;
+      gap: 40px;
 
       a {
         color: white;
         cursor: pointer;
 
-        &:not(:last-child) {
-          margin-bottom: 22px;
-        }
+        // &:not(:last-child) {
+        //   margin-bottom: 22px;
+        // }
 
         @include responsive(l-tablet) {
           text-align: center;
@@ -94,7 +95,7 @@
       }
 
       p {
-        margin-top: 24px;
+        margin-top: 12px;
         font-size: 14px;
         line-height: 16.8px;
         font-weight: 400;
@@ -114,7 +115,7 @@
   color: white;
 
   .container {
-    padding: 15px 0;
+    // padding: 15px 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
