--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -844,13 +844,11 @@ header .header_wrapper .burger_menu .line {
 .footer-main-info .container .usage-container {
   display: flex;
   flex-direction: column;
+  gap: 40px;
 }
 .footer-main-info .container .usage-container a {
   color: white;
   cursor: pointer;
-}
-.footer-main-info .container .usage-container a:not(:last-child) {
-  margin-bottom: 22px;
 }
 @media only screen and (max-width: 820px) {
   .footer-main-info .container .usage-container a {
@@ -885,7 +883,7 @@ header .header_wrapper .burger_menu .line {
   height: 80px;
 }
 .footer-main-info .container .unilab-team-container p {
-  margin-top: 24px;
+  margin-top: 12px;
   font-size: 14px;
   line-height: 16.8px;
   font-weight: 400;
@@ -903,7 +901,6 @@ header .header_wrapper .burger_menu .line {
   color: white;
 }
 .footer-additional-info .container {
-  padding: 15px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1196,9 +1193,6 @@ header .header_wrapper .burger_menu .line {
   color: #fff !important;
 }
 
-.about-main {
-  font-family: FiraGo400;
-}
 .about-main .main-content-wrapper {
   padding-top: 0;
 }
@@ -1212,7 +1206,7 @@ header .header_wrapper .burger_menu .line {
 .about-main h2 {
   margin-bottom: 16px;
   color: #0468dc;
-  font-family: FiraGO700;
+  font-family: FiraGo700;
   font-size: 32px;
   font-weight: bold;
   line-height: normal;
@@ -1220,7 +1214,7 @@ header .header_wrapper .burger_menu .line {
 .about-main p,
 .about-main .instructions-page li {
   color: #333333;
-  font-family: FiraGO350;
+  font-family: FiraGo350;
   font-size: 18px;
   font-weight: 350;
   line-height: normal;
@@ -1279,6 +1273,7 @@ header .header_wrapper .burger_menu .line {
   font-size: 22px;
   font-weight: 500;
   line-height: normal;
+  font-family: inherit;
   line-height: 26px;
 }
 .about-main .contacts-section > div ul img {
@@ -1301,7 +1296,7 @@ header .header_wrapper .burger_menu .line {
 }
 .about-project-footer .contacts-container h2 {
   color: #fff;
-  font-family: FiraGO700;
+  font-family: FiraGo700;
   font-size: 22px;
   font-weight: 700;
   line-height: normal;
@@ -1332,17 +1327,19 @@ header .header_wrapper .burger_menu .line {
 .about-project-footer .contacts-wrapper li:nth-of-type(4) {
   text-decoration: underline;
 }
+.about-project-footer .contacts-wrapper li:last-child a {
+  margin-bottom: 0;
+}
 .about-project-footer .usage-container > a:first-of-type {
   color: #fff;
-  font-family: FiraGO700;
+  font-family: FiraGo700;
   font-size: 22px;
   font-weight: 700;
   line-height: normal;
 }
 .about-project-footer .usage-container > a:last-of-type {
-  margin-top: 18px;
   color: #fff;
-  font-family: FiraGO400;
+  font-family: FiraGo400;
   font-size: 16px;
   font-weight: 400;
   line-height: normal;
@@ -1355,11 +1352,11 @@ header .header_wrapper .burger_menu .line {
 }
 .about-project-footer .footer-additional-info > aside p {
   color: #fff;
-  font-family: FiraGO300;
+  font-family: FiraGo300;
   font-size: 12px;
   font-weight: 300;
   line-height: normal;
-  padding: 30px;
+  padding: 30px 0;
 }
 
 body {
