--- a/view/about-project.html
+++ b/view/about-project.html
@@ -18,7 +18,7 @@
 
     <title>Library</title>
   </head>
-  <body>
+  <body class="a-b">
     <header class="about-project-header">
       <div class="header_wrapper container">
         <div class="header_components">
