--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1509,4 +1509,11 @@ body {
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
   backface-visibility: hidden;
+}
+
+.main-chapter {
+  font-family: FiraGo400;
+  font-size: 24px;
+  margin-top: 30px;
+  text-align: center;
 }/*# sourceMappingURL=global.css.map */
