--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -181,3 +181,10 @@
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
+.main-chapter{
+  font-family: FiraGo400;
+  font-size: 24px;
+  margin-top: 30px;
+  text-align: center;
+}
