--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="flip-navbar-right">
-          <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p>
+          <!-- <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p> -->
           <div id="menu" style="cursor: pointer">
             <img src="../assets/flip-page/burger-menu.png" alt="ჩამონათვალი" />
           </div>
@@ -98,6 +98,7 @@
     </header>
 
     <main id="main">
+      <p class="main-chapter" id="main-chapter">განდეგილი - თავი I</p>
       <section id="main-content">
         <div id="pdf-container"></div>
       </section>
