--- a/view/flip-page.html
+++ b/view/flip-page.html
@@ -14,7 +14,7 @@
   <body class="main-body-container" id="body">
     <!-- main header -->
     <header id="main-header">
-      <div class="header_wrapper container">
+      <div class="container header_wrapper">
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
@@ -46,7 +46,6 @@
         </div>
       </div>
     </header>
-
 
     <header class="flip-page-header" id="flip-page-header">
       <div class="flip-page-header-container container">
@@ -106,7 +105,10 @@
 
     <!-- adding loading -->
     <section id="loader">
-      <img src="../assets/flip-page/Animation - 1736632045640.gif" alt="წიგნი" />
+      <img
+        src="../assets/flip-page/Animation - 1736632045640.gif"
+        alt="წიგნი"
+      />
       <!-- <dotlottie-player src="https://lottie.host/68bcedd6-8aef-413d-9bed-603b9566a20b/MAqfUGeO4L.lottie" background="transparent" speed="1" style="width: 260px; height: 185px" loop autoplay></dotlottie-player> -->
       <h1>მიმდინარეობს წიგნის ჩატვირთვა<span class="dots"></span></h1>
       <a href="../index.html">დაბრუნდით მთავარ გვერდზე</a>
